Bug 497884 - Site Protocol Handler is not working
Summary: Site Protocol Handler is not working
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.12.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-12-25 14:42 UTC by Juraj
Modified: 2025-10-08 20:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juraj 2024-12-25 14:42:31 UTC
SUMMARY
After registering site custom protocol handler it does not work and opens external application instead.


STEPS TO REPRODUCE
1. Register a scheme handler
2. Try to use it (click on link with registered protocol)
3. Observe

OBSERVED RESULT
External commands is started, in case Falkon is registered to handle the registered protocol it will spawn an infinite amount of tabs.

EXPECTED RESULT
Redirected to the page specified in protocol handler

ADDITIONAL INFORMATION
After adding the protocol/scheme to the allowed list in [Preferences > Other > Custom Scheme Manager > Allowed Schemes (Add)] and restarting Falkon, it opens a single page with "about:blank#blocked" address in addressbar.
Comment 1 Juraj 2025-01-28 20:32:31 UTC
Results of my investigation:
- The scheme of the protocol handler "web+whatever" cannot be in the allowed/registered schemes.
  If it is registered as a custom scheme it will redirect to "about:blank#blocked"
- Falkons code to handle custom protocols is executed when the custom protocol handler is requested and also when browser starts, but somehow it is not working properly.
- If the Falkon custom code is bypassed and the request is accepted on the first try (with or without blocking popup), the feature works correctly, but makes the protocol handler only a temporary thing which needs to be registered after each browser restart (which is not a nice thing).
- I tested Qutebrowser if it works there and it does not seem to register it on its own after browser starts, I need to go to the site and than it will register it. Maybe this is the intended way of using it? First go to the site which offers protocol handler and then continue browsing? (can be done with pinned tabs and automaed answering within Falkon), This is how qutebrowser does it, from what I understand. (Or I missed something)

So I am still in doubts on how this thing should be working.
Comment 2 Bug Janitor Service 2025-10-08 19:44:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/falkon/-/merge_requests/151
Comment 3 Juraj 2025-10-08 20:05:08 UTC
Git commit 577aaff46281a004519819bcf24d6f3b688246a8 by Juraj Oravec.
Committed on 08/10/2025 at 19:42.
Pushed by jurajo into branch 'master'.

Fix web custom protocol handler registration
FIXED-IN: 25.12.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +3    -1    src/lib/other/protocolhandlermanager.cpp

https://invent.kde.org/network/falkon/-/commit/577aaff46281a004519819bcf24d6f3b688246a8