Fix web custom protocol handler registration

BUG: 497884
FIXED-IN: 25.12.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>